--- a/src/components/Cover/cover.scss
+++ b/src/components/Cover/cover.scss
@@ -102,7 +102,7 @@
           padding: 15.4rem 0 4rem;
 
           @media only screen and (min-width: 768px) {
-            padding: 18rem 0 15rem;
+            padding: 16rem 0 20rem;
           }
 
           @media only screen and (min-width: 1900px) {
