--- a/src/components/Synopsis/synopsis.scss
+++ b/src/components/Synopsis/synopsis.scss
@@ -54,7 +54,7 @@
 
   &__image-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -141,36 +141,8 @@
 
   &__reverse {
     .synopsis {
-      &__info-container {
-        @media only screen and (min-width: 992px) {
-          margin: 0 4rem 0 0;
-          padding: 2rem 0;
-        }
-
-        @media only screen and (min-width: 1200px) {
-          margin: 0 4rem 0 -42.33333%;
-        }
-
-        @media only screen and (min-width: 1900px) {
-          margin: 0 8rem 0 -72.33333%;
-        }
-      }
-
-      &__content {
-        & > .row {
-          display: flex;
-          flex-flow: row-reverse wrap;
-        }
-      }
-
       &__image-container {
-        @media only screen and (min-width: 992px) {
-          margin-left: -14.33333%;
-        }
-
-        @media only screen and (min-width: 1900px) {
-          margin-left: -16.33333%;
-        }
+        justify-content: flex-start;
       }
     }
   }
