--- a/src/components/TheHeader/theHeader.scss
+++ b/src/components/TheHeader/theHeader.scss
@@ -7,7 +7,7 @@
   }
 
   @media only screen and (min-width: 1024px) {
-    padding: 1.5rem 3rem;
+    padding: 1rem 3rem;
   }
 
   @media only screen and (min-width: 1200px) {
@@ -25,11 +25,6 @@
   &__image {
     width: auto;
     height: 3rem;
-
-    @media only screen and (min-width: 992px) {
-      width: 100%;
-      height: 100%;
-    }
 
     @media only screen and (min-width: 1900px) {
       width: auto;
